<resources>
    <string name="app_name">TravelThru</string>
    <string name="add_city">Add City</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="_00_00">00:00</string>
    <string name="_01_00">01:00</string>
    <string name="_02_00">02:00</string>
    <string name="_03_00">03:00</string>
    <string name="_04_00">04:00</string>
    <string name="_05_00">05:00</string>
    <string name="_06_00">06:00</string>
    <string name="_07_00">07:00</string>
    <string name="_08_00">08:00</string>
    <string name="_09_00">09:00</string>
    <string name="_10_00">10:00</string>
    <string name="_11_00">11:00</string>
    <string name="_12_00">12:00</string>
    <string name="_13_00">13:00</string>
    <string name="_14_00">14:00</string>
    <string name="_15_00">15:00</string>
    <string name="_16_00">16:00</string>
    <string name="_17_00">17:00</string>
    <string name="_18_00">18:00</string>
    <string name="_19_00">19:00</string>
    <string name="_20_00">20:00</string>
    <string name="_21_00">21:00</string>
    <string name="_22_00">22:00</string>
    <string name="_23_00">23:00</string>
    <string name="search_a_city">Search a city...</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="setCity">Add this city?</string>
</resources>