<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            android:text="@string/_00_00" />
        <TextView
            android:id="@+id/time00"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_01_00" />
        <TextView
            android:id="@+id/time01"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_02_00" />
        <TextView
            android:id="@+id/time02"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_03_00" />
        <TextView
            android:id="@+id/time03"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_04_00" />
        <TextView
            android:id="@+id/time04"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_05_00" />
        <TextView
            android:id="@+id/time05"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_06_00" />
        <TextView
            android:id="@+id/time06"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_07_00" />
        <TextView
            android:id="@+id/time07"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_08_00" />
        <TextView
            android:id="@+id/time08"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_09_00" />
        <TextView
            android:id="@+id/time09"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_10_00" />
        <TextView
            android:id="@+id/time10"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_11_00" />
        <TextView
            android:id="@+id/time11"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_12_00" />
        <TextView
            android:id="@+id/time12"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_13_00" />
        <TextView
            android:id="@+id/time13"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_14_00" />
        <TextView
            android:id="@+id/time14"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_15_00" />
        <TextView
            android:id="@+id/time15"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_16_00" />
        <TextView
            android:id="@+id/time16"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_17_00" />
        <TextView
            android:id="@+id/time17"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_18_00" />
        <TextView
            android:id="@+id/time18"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_19_00" />
        <TextView
            android:id="@+id/time19"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_20_00" />
        <TextView
            android:id="@+id/time20"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_21_00" />
        <TextView
            android:id="@+id/time21"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_22_00" />
        <TextView
            android:id="@+id/time22"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/_23_00" />
        <TextView
            android:id="@+id/time23"
            android:layout_gravity="center"/>
    </TableRow>
</TableLayout>